upgraded to compatibility with CommentPress Core

--- a/style.css
+++ b/style.css
@@ -1,15 +1,12 @@
 /*
-Theme Name: Commentpress Child
+Theme Name: CommentPress Core Child Theme
 Theme URI: http://www.futureofthebook.org/commentpress/
-Description: A demo child theme for Commentpress
-Tags: buddypress, groupblog, two-columns, sticky-post, threaded-comments, paragraph-comments
-Version: 1.0.1
-Template: commentpress
+Description: <strong>A demo child theme for CommentPress Core.</strong> Use this as the basis for building your own look and feel. <em>Important note for Multisite:</em> if you want to use this theme <em>without network-activating CommentPress Core</em> then you will need to network-activate this theme despite it appearing in the "Broken" themes section of your Network Admin. To do so, you need to use the "Bulk Actions" dropdown. It will then appear as an available theme only on blogs that have CommentPress Core enabled. If you <em>have network-enabled CommentPress Core</em>, then this theme will appear as normal.
+Tags: commentpress, buddypress, groupblog, two-columns, sticky-post, threaded-comments, paragraph-comments
+Version: 3.4
+Template: commentpress-theme
 Author: Christian Wach
 Author URI: http://www.haystack.co.uk
 */
 
-/* import parent css */
-@import url("../commentpress/style.css");
-
-/* deliberately empty: see `assets/css` for stylesheets */
+/* deliberately empty: see 'functions.php' for how styles and scripts are enqueued */
