--- a/assets/css/style-overrides.dev.css
+++ b/assets/css/style-overrides.dev.css
@@ -1,10 +1,16 @@
 /*
---------------------------------------------------------------------------------
+===============================================================
+Commentpress Child Theme Styles
+===============================================================
+AUTHOR: Christian Wach <needle@haystack.co.uk>
+---------------------------------------------------------------
+NOTES
+
 The following styles show what can be done with a child theme to change the look
-of a Commentpress site. The Theme Customizer in Wordpress 3.4 allows quite a lot
+of a CommentPress site. The Theme Customizer in Wordpress 3.4 allows quite a lot
 of changes to be made, but child themes allow much more to be done.
 
-Some of the styles below refer to Commentpress in a Multisite BuddyPress context
+Some of the styles below refer to CommentPress in a Multisite+BuddyPress context
 and may not be relevant to your situation. Chop and change as you see fit.
 
 When you're happy, use a minifier such as <http://www.refresh-sf.com/yui/> to
@@ -20,8 +26,10 @@ define('SCRIPT_DEBUG', true);
 
 somewhere in your `wp-config.php` file. Remove it when you've updated your 
 minified file and want Wordpress to select that one instead.
---------------------------------------------------------------------------------
+
+---------------------------------------------------------------
 */
+
 
 
 
@@ -31,7 +39,14 @@ Fonts
 --------------------------------------------------------------------------------
 */
 
-/* Cabin */
+/* Let's set the tagline for the blog and BuddyPress groups to Courier, for example */
+#book_header #tagline,
+body#main_blog div#item-header div#item-meta
+{
+	font-family: Courier, Times, serif;
+}
+
+/* Let's set headings around the site to Trebuchet MS, for example */
 #title h1,
 #title h1 a,
 .post h1,
@@ -52,6 +67,7 @@ body.activate #content h3,
 body.directory.logged-in #content h3,
 body.directory #content h3, 
 body.group-create #content form.standard-form > h3,
+body.create-blog #content #setupform label,
 #register-page #signup_form h2,
 div#item-header h2,
 ul#member-list h5,
@@ -62,9 +78,11 @@ span.highlight,
 .item-title a,
 div#message-thread strong a
 {
-	font-family: 'Lucida Sans Unicode', 'Lucida Grande', Arial, sans-serif;
+	font-family: 'Trebuchet MS', Helvetica, Arial, sans-serif;
 }
 
+body.create-blog #cp-multisite-options h4,
+body#main_blog.create-blog.buddypress_page #content .padder h3,
 body.registration #content h4, 
 body.group-create #group-create-body h2, 
 body.group-create #group-create-body h3, 
@@ -77,18 +95,18 @@ body.group-admin #content h3,
 body.group-admin #content h2,
 body#main_blog div#item-header div#item-actions h3,
 .profile h4,
+#register-page #cp-multisite-options h4,
+#content .mu_register h2,
+#content .mu_register label,
+#content .mu_register #cp-multisite-options h3,
+/* Comment form */
+div#respond h4#respond_title,
 /* BuddyPress Group Email Subscription compatibility */
 h3.activity-subscription-settings-title
 {
-	font-family: 'Lucida Sans Unicode', 'Lucida Grande', Arial, sans-serif;
+	font-family: 'Trebuchet MS', Helvetica, Arial, sans-serif;
 }
 
-/* Courier New */
-#book_header #tagline,
-body#main_blog div#item-header div#item-meta 
-{
-	font-family: 'Courier New', Times, serif;
-}
 
 
 
@@ -99,19 +117,32 @@ Stylistic regularity
 --------------------------------------------------------------------------------
 */
 
+#title h1
+{
+	letter-spacing: 1px;
+}
+
 #book_header #tagline 
 {
 	font-style: normal;
 	font-size: 1em;
 	color: #999;
+	padding-top: 5px;
+	letter-spacing: 1px;
 }
 
+/* Let's force all headings to be uppercase */
 .post h1,
 .post h2,
 .post h3,
 .post h4,
 .post h5,
-.post h6,
+.post h6
+{
+	text-transform: uppercase;
+}
+
+/* buddypress headings */
 body.directory.logged-in #content form.dir-form h3,
 body.directory #content form.dir-form h3,
 body.create-blog #content h3, 
@@ -134,10 +165,21 @@ span.highlight,
 	text-transform: uppercase;
 }
 
+div#respond h4#respond_title
+{
+	font-size: 1.3em;
+}
+
 body#main_blog #content div#item-header h2
 {
 	font-size: 1.6em;
 	margin: 0;
+}
+
+#register-page #cp-multisite-options h4
+{
+	margin-top: 0;
+	margin-bottom: 0;
 }
 
 button, 
@@ -158,7 +200,7 @@ div.generic-button a
 
 /* 
 --------------------------------------------------------------------------------
-Change some backgrounds and colours
+BuddyPress Main Site
 --------------------------------------------------------------------------------
 */
 
@@ -166,11 +208,7 @@ Change some backgrounds and colours
 #book_header,
 #footer
 {
-	/* 
-	Using !important below overrides any changes to 'Header Background Colour' 
-	made on the Commentpress settings page.
-	*/
-    background: #2c2622 !important;
+    background: #2c2622;
 }
 
 
@@ -182,6 +220,7 @@ body#main_blog
 	background: #38312D;
 }
 
+	body#main_blog.create-blog.buddypress_page #content .padder h3,
 	body#main_blog form.dir-form,
 	body#main_blog div.item-list-tabs,
 	body#main_blog form#whats-new-form, 
@@ -195,21 +234,6 @@ body#main_blog
 	#content div.item-list-tabs#object-nav
 	{
 		background: #FC0;
-	}
-	
-	#user_links ul li a, #user_links ul li a:link, #user_links ul li a:hover, #user_links ul li a:visited
-	{
-		background: #ddd;
-	}
-	
-	#user_links ul li a, #user_links ul li a:link, #user_links ul li a:visited
-	{
-		color: #666;
-	}
-	
-	#user_links ul li a:hover
-	{
-		color: #222;
 	}
 	
 	body#main_blog div.item-list-tabs#subnav
@@ -231,26 +255,32 @@ body#main_blog
 	
 	
 
-
-
-
-/* 
---------------------------------------------------------------------------------
-List Items
---------------------------------------------------------------------------------
-*/
+/***************** List Items ******************/
 
 ul.item-list li
 {
 	border-bottom: 1px solid #B5BFB2;
 }
 
+.item-title a 
+{
+	font-size: 1em;
+}
+
+/* groups, blogs & activities lists */
+ul#groups-list > li,
+ul#blogs-list > li,
 ul.item-list.activity-list > li
 {
 	padding-left: 14px;
     border-left: 10px solid #FC0;
     margin-top: 1px;
     margin-bottom: 1px;
+}
+
+ul.item-list li div.item-desc 
+{
+	color: #761D19;
 }
 
 ul.item-list.activity-list li.load-more
@@ -279,6 +309,276 @@ body.group-home ul.item-list.activity-list > li
 
 
 
+
+
+/* 
+--------------------------------------------------------------------------------
+Prose 
+--------------------------------------------------------------------------------
+*/
+
+/* body (allow Theme Customizer to set colour for non-groupblogs) */
+body.blogtype-0
+{
+    background: #745494;
+}
+
+/* body (do not allow Theme Customizer to set colour for groupblogs) */
+body.is-groupblog.blogtype-0
+{
+    background: #745494 !important;
+}
+
+/* group home */
+div#content.groupblogtype-0 div#item-header,
+#content.groupblogtype-0 div.item-list-tabs#object-nav
+{
+	background: #745494;
+}
+
+/* group bg 
+li.groupblogtype-0
+{
+    background: #745494;
+}
+*/
+
+/* group decoration */
+ul.item-list li.groupblogtype-0 .item-title a,
+ul.item-list li.groupblogtype-0 .item-desc,
+ul.item-list li.groupblogtype-0 .item-desc p,
+ul.item-list li.groupblogtype-0 .item-desc a
+{
+    color: #745494;
+}
+
+/* groups, blogs & activities lists */
+ul#groups-list li.groupblogtype-0,
+ul#blogs-list li.groupblogtype-0,
+ul.activity-list li.groupblogtype-0
+{
+	padding-left: 14px;
+    border-left: 10px solid #745494;
+}
+
+/* activity tab */
+#activity_sidebar li.groupblogtype-0
+{
+    border-left: 10px solid #745494;
+}
+
+/* revert overridden posts to poetry */
+body.blogtype-0 #content .post.overridden_type-1 p
+{
+	line-height: 1.5;
+	padding-bottom: 24px;
+}
+
+/* make some space after search_meta for overridden */
+body.blogtype-0 #content .post.overridden_type-1 div.search_meta
+{
+	padding-bottom: 24px;
+}
+
+/* prose defaults to right-bubbles */
+
+/* poetry overrides default to left-bubbles 
+body.blogtype-0 .post.overridden_type-1 span.commenticonbox 
+{
+	position: absolute;
+	margin-left: -40px;
+	margin-top: -2px;	
+	padding-right: 20px;
+	right: auto;
+}
+*/
+
+
+
+
+/* 
+--------------------------------------------------------------------------------
+Poetry
+--------------------------------------------------------------------------------
+*/
+
+/* body (allow Theme Customizer to set colour for non-groupblogs) */
+body.blogtype-1
+{
+	background: #C36;
+}
+
+/* body (do not allow Theme Customizer to set colour for groupblogs) */
+body.is-groupblog.blogtype-1
+{
+	background: #C36 !important;
+}
+
+/* group home */
+div#content.groupblogtype-1 div#item-header,
+#content.groupblogtype-1 div.item-list-tabs#object-nav
+{
+	background: #C36;
+}
+
+/* group bg 
+li.groupblogtype-1
+{
+    background: #C36;
+}
+*/
+
+/* group */
+ul.item-list li.groupblogtype-1 .item-title a,
+ul.item-list li.groupblogtype-1 div.item-desc,
+ul.item-list li.groupblogtype-1 div.item-desc p,
+ul.item-list li.groupblogtype-1 div.item-desc a
+{
+	color: #C36;
+}
+
+/* groups, blogs & activities lists */
+ul#groups-list li.groupblogtype-1,
+ul#blogs-list li.groupblogtype-1,
+ul.activity-list li.groupblogtype-1
+{
+	padding-left: 14px;
+    border-left: 10px solid #C36;
+}
+
+/* activity tab */
+#activity_sidebar li.groupblogtype-1
+{
+    border-left: 10px solid #C36;
+}
+
+/* content formatting for poetry */
+body.blogtype-1 #content .post p
+{
+	line-height: 1.5;
+	padding-bottom: 24px;
+}
+
+/* revert overridden posts to prose */
+body.blogtype-1 #content .post.overridden_type-0 p,
+body.commentpress_page.blogtype-1 #content .post p
+{
+	line-height: 1.5;
+	padding-bottom: 11px;
+}
+
+/* allow for comment form */
+body.commentpress_page.blogtype-1 #content #respond p
+{
+	padding-bottom: 0;
+}
+
+/* make some space after search_meta */
+body.blogtype-1 #content div.search_meta
+{
+	padding-bottom: 24px;
+}
+
+/* remove space before overridden posts */
+body.blogtype-1 #content .post.overridden_type-0 div.search_meta
+{
+	padding-bottom: 7px;
+}
+
+/* unfortunately, we need to reset search */
+body.blogtype-1 #content div.search_meta p
+{
+	margin: 0;
+	padding: 0;
+}
+
+/* poetry defaults to left-bubbles 
+body.blogtype-1 .post span.commenticonbox 
+{
+	position: absolute;
+	margin-left: -40px;
+	margin-top: -2px;	
+	padding-right: 20px;
+	right: auto;
+}
+*/
+
+/* prose overrides default to right-bubbles 
+body.blogtype-1 .post.overridden_type-0 span.commenticonbox 
+{
+	position: absolute;
+	margin-left: 0;
+	margin-top: 0;	
+	padding-right: 20px;
+	right: 25px;
+}
+*/
+
+
+
+
+
+/* 
+--------------------------------------------------------------------------------
+Translation 
+--------------------------------------------------------------------------------
+*/
+
+/* body (allow Theme Customizer to set colour for non-groupblogs) */
+body.blogtype-2
+{
+    background: #A36D47;
+}
+
+/* body (do not allow Theme Customizer to set colour for groupblogs) */
+body.is-groupblog.blogtype-2
+{
+    background: #A36D47 !important;
+}
+
+/* group home */
+div#content.groupblogtype-2 div#item-header,
+#content.groupblogtype-2 div.item-list-tabs#object-nav
+{
+	background: #A36D47;
+}
+
+/* group bg 
+li.groupblogtype-2
+{
+    background: #A36D47;
+}
+*/
+
+/* group */
+ul.item-list li.groupblogtype-2 .item-title a,
+ul.item-list li.groupblogtype-2 .item-desc,
+ul.item-list li.groupblogtype-2 .item-desc p,
+ul.item-list li.groupblogtype-2 .item-desc a
+{
+    color: #A36D47;
+}
+
+/* groups, blogs & activities lists */
+ul#groups-list li.groupblogtype-2,
+ul#blogs-list li.groupblogtype-2,
+ul.activity-list li.groupblogtype-2
+{
+	padding-left: 14px;
+    border-left: 10px solid #A36D47;
+}
+
+/* activity tab */
+#activity_sidebar li.groupblogtype-2
+{
+    border-left: 10px solid #A36D47;
+}
+
+
+
+
+
+
 /* 
 --------------------------------------------------------------------------------
 Footer
@@ -288,11 +588,16 @@ Footer
 #footer
 {
 	border: 5px solid #2c2622;
+	/* the box-shadow needs to be darker because the background is darker */
+	-webkit-box-shadow: #444 2px 2px 5px;
+	-moz-box-shadow: #444 2px 2px 5px;
+	-khtml-box-shadow: #444 2px 2px 5px;
+	box-shadow: #444 2px 2px 5px;
 }
 
 #footer p
 {
-	font-family: Helvetica, Arial, sans-serif;
+	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	font-size: 0.8em;
 	color: #fff;
 }
