--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ Version: 3.8.8
 Template: commentpress-theme
 Author: Christian Wach
 Author URI: http://www.haystack.co.uk
+Text Domain: commentpress-default-child
 */
 
 /* deliberately empty: see 'functions.php' for how styles and scripts are enqueued */
